--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                     <li><a href="#home">Home</a></li>
                     <li><a href="#services">Services</a></li>
                     <li><a href="#brands">Brands</a></li>
+                    <li><a href="#owners">Owner</a></li>
                     <li><a href="#contact">Contact</a></li>
-                    <li><a href="#contact">Social Media</a></li>
                 </ul>
             </div>
         </div>
