--- a/about.html
+++ b/about.html
@@ -15,9 +15,9 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="index.html#services">Services</a></li>
+                    <li><a href="index.html#owners">Owner</a></li>
                     <li><a href="index.html#brands">Brands</a></li>
                     <li><a href="index.html#contact">Contact</a></li>
-                    <li><a href="index.html#contact">Social Media</a></li>
                 </ul>
             </div>
         </div>
