--- a/service.html
+++ b/service.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Services</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -15,9 +15,9 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="index.html#services">Services</a></li>
+                    <li><a href="index.html#owners">Owner</a></li>
                     <li><a href="index.html#brands">Brands</a></li>
                     <li><a href="index.html#contact">Contact</a></li>
-                    <li><a href="index.html#contact">Social Media</a></li>
                 </ul>
             </div>
         </div>
